services/home/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home
  namespace: supernetes
  labels:
    app: home

spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: home
          image: sjc.ocir.io/axlfudrjenut/supernetes/home:latest
          resources:
            limits:
              cpu: 100m
              memory: "128Mi"
          ports:
            - name: http
              containerPort: 5000
