services/home/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home
  namespace: supernetes
spec:
  rules:
    - host: supernetes.isupinthe.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  name: http
